--- a/ApotekaAppFront/src/app/components/login/login.component.html
+++ b/ApotekaAppFront/src/app/components/login/login.component.html
@@ -1,1 +1,50 @@
-<p>login works!</p>
+<div class="outer">
+    <div class="middle">
+      <div class="inner">
+        
+        <div *ngIf="isLoading" style="text-align: center;">
+          <app-loading-spinner></app-loading-spinner>
+        </div>
+        <div class="center myFonts">
+          <h2>Log in</h2>
+        <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
+          <mat-form-field  appearance="fill" color="accent">
+            <mat-label for="email">Email</mat-label>
+            <input matInput 
+              type="email"
+              id="email"
+              class="form-control"
+              ngModel
+              name="email"
+              required
+              email
+            />
+          </mat-form-field>
+          <mat-form-field appearance="fill" color="accent">
+            <mat-label for="password">Password</mat-label>
+            <input matInput
+              type="password"
+              id="password"
+              class="form-control"
+              ngModel
+              name="password"
+              required
+            />
+          </mat-form-field>
+          <div class="alert" *ngIf="error">
+            <p>{{ error }}</p>
+          </div>
+          <div>
+            <button
+              mat-raised-button color="primary"
+              type="submit"
+              [disabled]="!authForm.valid">
+              Log in
+            </button>
+          </div>
+        </form>
+      </div>
+        </div>
+      </div>
+    </div>
+    
