--- a/ApotekaAppFront/src/app/app.component.html
+++ b/ApotekaAppFront/src/app/app.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar-row>
       <span class="menu-spacer"></span>
       <div>      
-        <button mat-raised-button color="accent" *ngIf="!loggedIn()">Sign-up </button>
+        <button mat-raised-button color="accent" *ngIf="!loggedIn()" [routerLink]="'/register'">Sign-up </button>
         <button mat-raised-button color="accent" *ngIf="!loggedIn()" [routerLink]="'/login'"> Log in </button>
         <button mat-raised-button color="accent" *ngIf="loggedIn()" (click)="logout()"> Log out </button>          
       </div>
