--- a/ApotekaAppFront/src/app/components/registration/registration.component.html
+++ b/ApotekaAppFront/src/app/components/registration/registration.component.html
@@ -1,1 +1,53 @@
-<p>registration works!</p>
+<mat-card>
+    <mat-card-content>
+
+    <form class="reactiveForm" [formGroup] = "registrationForm" (submit) = "onSubmit()">
+    <h2>Sign up</h2>
+        <div fxLayout="column">
+            <mat-form-field class="full-width-input">
+                <input matInput placeholder="Email" name="email" formControlName="email" required/>
+            </mat-form-field>
+
+            <mat-form-field class="full-width-input">
+                <input matInput type="password" placeholder="Password" name="password" formControlName="password" required>
+            </mat-form-field>
+
+            <mat-form-field class="full-width-input">
+                <input matInput type="password" placeholder="Password confirm" name="passwordc" formControlName="passwordc" required>
+            </mat-form-field>
+
+            <mat-form-field class="full-width-input">
+                <input matInput placeholder="Ime" name="ime" formControlName="ime" required>
+            </mat-form-field>
+
+            <mat-form-field class="full-width-input">
+                <input matInput placeholder="Prezime" name="prezime" formControlName="prezime" required>
+            </mat-form-field>
+
+            <mat-form-field class="full-width-input">
+                <input matInput placeholder="Adresa" name="adresa" formControlName="adresa" required>
+            </mat-form-field>
+
+            <mat-form-field class="full-width-input">
+                <input matInput placeholder="Grad" name="grad" formControlName="grad" required>
+            </mat-form-field>
+                
+            <mat-form-field class="full-width-input">
+                <input matInput placeholder="Drzava" name="drzava" formControlName="drzava" required>
+            </mat-form-field>
+            
+            <mat-form-field class="full-width-input">
+                <input matInput placeholder="Broj" name="broj" formControlName="broj" required>
+            </mat-form-field>
+
+
+        </div>
+        
+        <button mat-raised-button color="primary" id = "registerBtn" [disabled] = "registrationForm.invalid">Sign up</button>
+        <mat-error name="errorRegister" *ngIf=wrong style="margin-top: 5%;">
+            {{errorMessage}}
+        </mat-error>    
+    </form>
+
+    </mat-card-content>
+</mat-card>
