--- a/ApotekaAppFront/src/app/components/home-page-user/home-page-user.component.html
+++ b/ApotekaAppFront/src/app/components/home-page-user/home-page-user.component.html
@@ -11,6 +11,7 @@
         <button  mat-raised-button >Kreiranje zalbe</button>     
         <button  mat-raised-button >Preuzimanje leka</button>     
         <button  mat-raised-button >Zakazivanje savetovanja</button>
+        <button  mat-raised-button [routerLink]="'/profile'">Profil</button>
     </mat-toolbar-row>
 </mat-toolbar>
 
